# lumbermill-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/logfmt/: Cargo.toml
crates/logfmt/src/: file.rs  lib.rs  log.rs  logger.rs  macros.rs
crates/lumbermill/: Cargo.toml  README.md
crates/lumbermill/src/: file.rs  log.rs  logger.rs  macros.rs
examples/01-defaults/: main.rs
examples/02-formats/: main.rs
examples/03-levels/: main.rs
examples/04-log-files/: main.rs
sandbox/binary/: Cargo.toml
sandbox/binary/src/: main.rs
src/: file.rs  lib.rs  log.rs  logger.rs  macros.rs  main.rs  stdout.rs
