[package]
name = "lumbermill"
description = "Simple structured logging"
edition = "2021"
license = "MIT"
authors = ["Siddhant <sdnts@sdnts.dev>"]
categories = ["log", "logger"]
homepage = "https://github.com/sdnts/lumbermill"
repository = "https://github.com/sdnts/lumbermill"
version = "0.0.2"

[dependencies]
parking_lot = "0.12.1"
time = { version = "0.3.20", features = ["std", "formatting"] }

[[example]]
name = "01-defaults"

[[example]]
name = "02-formats"

[[example]]
name = "03-levels"

[[example]]
name = "04-log-files"
