[package]
name = "lumbermill"
description = "Simple structured logging"
edition = "2021"
license = "MIT"
authors = ["Siddhant <sdnts@sdnts.dev>"]
categories = ["log", "logger"]
homepage = "https://github.com/sdnts/lumbermill-rs"
repository = "https://github.com/sdnts/lumbermill-rs"
version = "0.0.4"

[dependencies]
parking_lot = "0.12.1"
time = { version = "0.3.20", features = ["std", "formatting"] }

[dev-dependencies]
ctor = "0.2.0"

[[example]]
name = "01-defaults"

[[example]]
name = "02-formats"

[[example]]
name = "03-levels"

[[example]]
name = "04-log-files"
