[package]
name = "lumbermill"
description = "Simple structured logging"
edition = "2021"
license = "MIT"
authors = ["Siddhant <sdnts@sdnts.dev>"]
categories = ["development-tools::debugging"]
homepage = "https://github.com/sdnts/lumbermill-rs"
repository = "https://github.com/sdnts/lumbermill-rs"
version = "0.1.4"

[workspace]
members = [
  # Crates here are only used for experimentation, they aren't part of lumbermill
  "sandbox/*"
]

[dependencies]
parking_lot = "0.12.1"
time = { version = "0.3.21", features = ["std", "formatting"] }

[dev-dependencies]
ctor = "0.2.2"

[[example]]
name = "01-defaults"

[[example]]
name = "02-formats"

[[example]]
name = "03-levels"

[[example]]
name = "04-log-files"
